--- a/demos/blockfactory/index.html
+++ b/demos/blockfactory/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="target-densitydpi=device-dpi, height=660, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Blockly Demo: Blockly Developer Tools</title>
+  <title>Blockly デモ: Blockly 開発者ツール</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="analytics.js"></script>
   <script src="block_definition_extractor.js"></script>
@@ -46,7 +46,7 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Blockly Developer Tools
+    <a href="../index.html">デモ</a> &gt; Blockly 開発者ツール
     <button id="helpButton" title="View documentation in new window.">
       <span>Help</span>
     </button>
@@ -461,7 +461,7 @@
   </xml>
 
   <xml xmlns="https://developers.google.com/blockly/xml" id="workspacefactory_toolbox" class="toolbox">
-    <category name="Logic" colour="210">
+    <category name="論理" colour="210">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
@@ -470,7 +470,7 @@
       <block type="logic_null"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" colour="120">
+    <category name="ループ" colour="120">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number">
@@ -499,7 +499,7 @@
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" colour="230">
+    <category name="数学" colour="230">
       <block type="math_number"></block>
       <block type="math_arithmetic">
         <value name="A">
@@ -586,7 +586,7 @@
       </block>
       <block type="math_random_float"></block>
     </category>
-    <category name="Text" colour="160">
+    <category name="テキスト" colour="160">
       <block type="text"></block>
       <block type="text_join"></block>
       <block type="text_append">
@@ -663,7 +663,7 @@
         </value>
       </block>
     </category>
-    <category name="Lists" colour="260">
+    <category name="リスト" colour="260">
       <block type="lists_create_with">
         <mutation items="0"></mutation>
       </block>
@@ -753,8 +753,8 @@
       </block>
     </category>
     <sep></sep>
-    <category name="Variables" colour="330" custom="VARIABLE"></category>
-    <category name="Functions" colour="290" custom="PROCEDURE"></category>
+    <category name="変数" colour="330" custom="VARIABLE"></category>
+    <category name="関数" colour="290" custom="PROCEDURE"></category>
     <sep></sep>
     <category name="Block Library" colour="260" id="blockLibCategory"></category>
   </xml>
