--- a/demos/blockfactory_old/index.html
+++ b/demos/blockfactory_old/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="target-densitydpi=device-dpi, height=660, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Blockly Demo: Block Factory</title>
+  <title>Blockly デモ: Block Factory</title>
   <script src="/storage.js"></script>
   <script src="factory.js"></script>
   <script src="../../blockly_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <script src="blocks.js"></script>
   <style>
     html, body {
@@ -95,7 +95,7 @@
     <tr>
       <td width="50%" height="5%">
         <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-          <a href="../index.html">Demos</a> &gt; Block Factory</h1>
+          <a href="../index.html">デモ</a> &gt; Block Factory</h1>
       </td>
       <td width="50%" height="5%">
         <table>
