--- a/demos/custom-fields/index.html
+++ b/demos/custom-fields/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Custom Fields</title>
+  <title>Blockly デモ: カスタムフィールド</title>
   <style>
     body {
       margin: 0 10%;
@@ -23,9 +23,9 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Custom Fields</h1>
+    <a href="../index.html">デモ</a> &gt; カスタムフィールド</h1>
 
-  <p>These demos are intended for developers who want creating custom block fields.</p>
+  <p>これらのデモは、カスタムブロックフィールドを作成する開発者を対象としています。</p>
 
   <table>
     <tr>
