--- a/demos/custom-fields/turtle/index.html
+++ b/demos/custom-fields/turtle/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Blockly Demo: Custom Turtle Field</title>
+    <title>Blockly デモ: Custom Turtle Field</title>
     <script src="../../../blockly_uncompressed.js"></script>
     <script src="blocks.js"></script>
     <script src="field_turtle.js"></script>
