--- a/demos/fixed/index.html
+++ b/demos/fixed/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Fixed Blockly</title>
+  <title>Blockly デモ: Fixed Blockly</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <style>
     body {
       background-color: #fff;
@@ -19,11 +19,11 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Fixed Blockly</h1>
+    <a href="../index.html">デモ</a> &gt; 固定サイズのBlockly</h1>
 
-  <p>This is a simple demo of injecting Blockly into a fixed-sized 'div' element.</p>
+  <p>これは、固定サイズの「div」要素にBlocklyを注入する簡単なデモです</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure-blockly/web/fixed-size">injecting fixed-sized Blockly</a>&hellip;</p>
+  <p>&rarr; <a href="https://developers.google.com/blockly/guides/configure-blockly/web/fixed-size">固定サイズのBlocklyの注入</a>の詳細&hellip;</p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
