--- a/demos/interpreter/index.html
+++ b/demos/interpreter/index.html
@@ -6,6 +6,6 @@
   <meta http-equiv="refresh" content="0;URL='step-execution.html'"/>
 </head>
 <body>
-Redirecting to <a href="step-execution.html">step execution JS-Interpreter demo</a>.
+Redirecting to <a href="step-execution.html">逐次翻訳型JavaScript 実行 デモ</a>.
 </body>
 </html>
