--- a/demos/minimap/index.html
+++ b/demos/minimap/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Minimap</title>
+  <title>Blockly デモ: Minimap</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <script src="minimap.js"></script>
   <style>
     body {
@@ -20,7 +20,7 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Minimap</h1>
+    <a href="../index.html">デモ</a> &gt; Minimap</h1>
 
   <p>This is a simple demo showing how a minimap can be implemented.</p>
 
