--- a/demos/mirror/index.html
+++ b/demos/mirror/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Mirrored Blockly</title>
+  <title>Blockly デモ: ミラーリングされたBlockly</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <style>
     body {
       background-color: #fff;
@@ -19,12 +19,11 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Mirrored Blockly</h1>
+    <a href="../index.html">デモ</a> &gt; ミラーリングされたBlockly</h1>
 
-  <p>This is a simple demo of a primary Blockly instance that controls a secondary Blockly instance with events.
-  Open the JavaScript console to see the event passing.</p>
+  <p>これは、イベントでセカンダリBlocklyインスタンスを制御するプライマリBlocklyインスタンスの簡単なデモです。JavaScriptコンソールを開いて、イベントの通過を確認します。</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/events">events</a>&hellip;</p>
+  <p>&rarr; <a href="https://developers.google.com/blockly/guides/configure/web/events">イベント</a>の詳細&hellip;</p>
 
   <table width="100%">
     <tr>
