--- a/demos/resizable/index.html
+++ b/demos/resizable/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Resizable Blockly (Part 1)</title>
+  <title>Blockly デモ: サイズ変更可能な　Blockly (パート1)</title>
   <style>
     html, body {
       height: 100%;
@@ -33,13 +33,11 @@
     <tr>
       <td>
         <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-          <a href="../index.html">Demos</a> &gt; Resizable Blockly (Part 1)</h1>
+          <a href="../index.html">デモ</a> &gt; サイズ変更可能な　Blockly (パート1)</h1>
 
-        <p>The first step in creating a resizable Blockly workspace is to use
-        CSS or tables to create an area for it.
-        Next, <a href="overlay.html">inject Blockly</a> over that area.</p>
+        <p>サイズ変更可能なBlocklyワークスペースを作成する最初のステップは、CSSまたはテーブルを使用して、そのための領域を作成することです。次に、その領域に<a href="overlay.html">Blocklyを埋め込み</a>ます。</p>
 
-        <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/resizable">injecting resizable Blockly</a>&hellip;</p>
+        <p>&rarr; <a href="https://developers.google.com/blockly/guides/configure/web/resizable">サイズ変更可能なBlockly</a>の詳細&hellip;</p>
       </td>
     </tr>
     <tr>
