--- a/demos/resizable/overlay.html
+++ b/demos/resizable/overlay.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Resizable Blockly (Part 2)</title>
+  <title>Blockly デモ: サイズ変更可能なBlockly (パート2)</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <style>
     html, body {
       height: 100%;
@@ -34,15 +34,13 @@
     <tr>
       <td>
         <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-          <a href="../index.html">Demos</a> &gt; Resizable Blockly (Part 2)</h1>
+          <a href="../index.html">デモ</a> &gt; サイズ変更可能なBlockly (パート2)</h1>
 
         <p>
-          Once an <a href="index.html">area is defined</a>, Blockly can be
-          injected and positioned over the area.
-          A resize handler keeps it in position as the page changes.
+          一旦<a href="index.html">領域が定義され</a>Blocklyを注入した領域の上に配置することができます。サイズ変更ハンドラーは、ページが変更されても位置を保持します。
         </p>
 
-        <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/resizable">injecting resizable Blockly</a>&hellip;</p>
+        <p>&rarr; <a href="https://developers.google.com/blockly/guides/configure/web/resizable">サイズ変更可能なBlocklyの注入</a>の詳細&hellip;</p>
       </td>
     </tr>
     <tr>
