--- a/tests/multi_playground.html
+++ b/tests/multi_playground.html
@@ -162,7 +162,7 @@ h1 {
   </xml>
 
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox-categories" style="display: none">
-    <category name="Logic" categorystyle="logic_category">
+    <category name="論理" categorystyle="logic_category">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
@@ -171,7 +171,7 @@ h1 {
       <block type="logic_null" disabled="true"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" categorystyle="loop_category">
+    <category name="ループ" categorystyle="loop_category">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number">
@@ -201,7 +201,7 @@ h1 {
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" categorystyle="math_category">
+    <category name="数学" categorystyle="math_category">
       <block type="math_number" gap="32">
         <field name="NUM">123</field>
       </block>
@@ -302,7 +302,7 @@ h1 {
         </value>
       </block>
     </category>
-    <category name="Text" categorystyle="text_category">
+    <category name="テキスト" categorystyle="text_category">
       <block type="text"></block>
       <block type="text_multiline"></block>
       <block type="text_join"></block>
@@ -380,7 +380,7 @@ h1 {
         </value>
       </block>
     </category>
-    <category name="Lists" categorystyle="list_category">
+    <category name="リスト" categorystyle="list_category">
       <block type="lists_create_with">
         <mutation items="0"></mutation>
       </block>
@@ -470,8 +470,8 @@ h1 {
       </block>
     </category>
     <sep></sep>
-    <category name="Variables" categorystyle="variable_category" custom="VARIABLE"></category>
-    <category name="Functions" categorystyle="procedure_category" custom="PROCEDURE"></category>
+    <category name="変数" categorystyle="variable_category" custom="VARIABLE"></category>
+    <category name="関数" categorystyle="procedure_category" custom="PROCEDURE"></category>
   </xml>
 </body>
 </html>
