--- a/tests/playground.html
+++ b/tests/playground.html
@@ -736,7 +736,7 @@ var spaghettiXml = [
   Variables category uses untyped variable blocks.
   See https://developers.google.com/blockly/guides/create-custom-blocks/variables#untyped_variable_blocks for more information. -->
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox-categories" style="display: none">
-    <category name="Logic" categorystyle="logic_category">
+    <category name="論理" categorystyle="logic_category">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
@@ -745,7 +745,7 @@ var spaghettiXml = [
       <block type="logic_null" disabled="true"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" categorystyle="loop_category">
+    <category name="ループ" categorystyle="loop_category">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number">
@@ -775,7 +775,7 @@ var spaghettiXml = [
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" categorystyle="math_category">
+    <category name="数学" categorystyle="math_category">
       <block type="math_number" gap="32">
         <field name="NUM">123</field>
       </block>
@@ -876,7 +876,7 @@ var spaghettiXml = [
         </value>
       </block>
     </category>
-    <category name="Text" categorystyle="text_category">
+    <category name="テキスト" categorystyle="text_category">
       <block type="text"></block>
       <block type="text_multiline"></block>
       <block type="text_join"></block>
@@ -979,7 +979,7 @@ var spaghettiXml = [
         </value>
       </block>
     </category>
-    <category name="Lists" categorystyle="list_category">
+    <category name="リスト" categorystyle="list_category">
       <block type="lists_create_with">
         <mutation items="0"></mutation>
       </block>
@@ -1070,15 +1070,15 @@ var spaghettiXml = [
       </block>
     </category>
     <sep></sep>
-    <category name="Variables" categorystyle="variable_category" custom="VARIABLE"></category>
-    <category name="Functions" categorystyle="procedure_category" custom="PROCEDURE"></category>
+    <category name="変数" categorystyle="variable_category" custom="VARIABLE"></category>
+    <category name="関数" categorystyle="procedure_category" custom="PROCEDURE"></category>
   </xml>
 
   <!-- toolbox-categories-typed-variables has a category menu and an
   auto-closing flyout.  The Variables category uses typed variable blocks.
   See https://developers.google.com/blockly/guides/create-custom-blocks/variables#typed_variable_blocks for more information. -->
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox-categories-typed-variables" style="display: none">
-    <category name="Logic" categorystyle="logic_category">
+    <category name="論理" categorystyle="logic_category">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
@@ -1087,7 +1087,7 @@ var spaghettiXml = [
       <block type="logic_null" disabled="true"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" categorystyle="loop_category">
+    <category name="ループ" categorystyle="loop_category">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number">
@@ -1117,7 +1117,7 @@ var spaghettiXml = [
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" categorystyle="math_category">
+    <category name="数学" categorystyle="math_category">
       <block type="math_number" gap="32">
         <field name="NUM">123</field>
       </block>
@@ -1218,7 +1218,7 @@ var spaghettiXml = [
         </value>
       </block>
     </category>
-    <category name="Text" categorystyle="text_category">
+    <category name="テキスト" categorystyle="text_category">
       <block type="text"></block>
       <block type="text_multiline"></block>
       <block type="text_join"></block>
@@ -1321,7 +1321,7 @@ var spaghettiXml = [
         </value>
       </block>
     </category>
-    <category name="Lists" categorystyle="list_category">
+    <category name="リスト" categorystyle="list_category">
       <block type="lists_create_with">
         <mutation items="0"></mutation>
       </block>
@@ -1412,8 +1412,8 @@ var spaghettiXml = [
       </block>
     </category>
     <sep></sep>
-    <category name="Variables" categorystyle="variable_category" custom="VARIABLE_DYNAMIC"></category>
-    <category name="Functions" categorystyle="procedure_category" custom="PROCEDURE"></category>
+    <category name="変数" categorystyle="variable_category" custom="VARIABLE_DYNAMIC"></category>
+    <category name="関数" categorystyle="procedure_category" custom="PROCEDURE"></category>
   </xml>
 
   <!-- toolbox-test-blocks has a category menu and an auto-closing flyout.
