--- a/tests/workspace_svg/index.html
+++ b/tests/workspace_svg/index.html
@@ -83,7 +83,7 @@ h1 {
   </xml>
 
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox-categories" style="display: none">
-    <category name="Logic" colour="210">
+    <category name="論理" colour="210">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
@@ -92,7 +92,7 @@ h1 {
       <block type="logic_null" disabled="true"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" colour="120">
+    <category name="ループ" colour="120">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number">
@@ -122,7 +122,7 @@ h1 {
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" colour="230">
+    <category name="数学" colour="230">
       <block type="math_number" gap="32"></block>
       <block type="math_arithmetic">
         <value name="A">
@@ -221,7 +221,7 @@ h1 {
         </value>
       </block>
     </category>
-    <category name="Text" colour="160">
+    <category name="テキスト" colour="160">
       <block type="text"></block>
       <block type="text_join"></block>
       <block type="text_append">
@@ -323,7 +323,7 @@ h1 {
         </value>
       </block>
     </category>
-    <category name="Lists" colour="260">
+    <category name="リスト" colour="260">
       <block type="lists_create_with">
         <mutation items="0"></mutation>
       </block>
@@ -414,8 +414,8 @@ h1 {
       </block>
     </category>
     <sep></sep>
-    <category name="Variables" colour="330" custom="VARIABLE"></category>
-    <category name="Functions" colour="290" custom="PROCEDURE"></category>
+    <category name="変数" colour="330" custom="VARIABLE"></category>
+    <category name="関数" colour="290" custom="PROCEDURE"></category>
   </xml>
 </body>
 </html>
