--- a/demos/graph/index.html
+++ b/demos/graph/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Graph</title>
+  <title>Blockly デモ: グラフ</title>
   <script src="https://www.google.com/jsapi"></script>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <style>
     body {
       background-color: #fff;
@@ -35,11 +35,11 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Graph</h1>
+    <a href="../index.html">デモ</a> &gt; グラフ</h1>
 
-  <p>This is a demo of giving instant feedback as blocks are changed.</p>
+  <p>これは、ブロックが変更されたときに即座にフィードバックを与えるデモです。</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/code-generators#generating_code">Realtime generation</a>&hellip;</p>
+  <p>&rarr; <a href="https://developers.google.com/blockly/guides/configure/web/code-generators#generating_code">リアルタイム生成</a>&の詳細&hellip;</p>
 
   <table>
     <tr>
@@ -58,7 +58,7 @@
   </div>
 
   <xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">
-    <category name="Math" colour="%{BKY_MATH_HUE}">
+    <category name="数学" colour="%{BKY_MATH_HUE}">
       <block type="math_number">
         <field name="NUM">123</field>
       </block>
@@ -158,10 +158,10 @@
         </value>
       </block>
     </category>
-    <category name="Variables" colour="%{BKY_VARIABLES_HUE}">
+    <category name="変数" colour="%{BKY_VARIABLES_HUE}">
       <block type="graph_get_x"></block>
     </category>
-    <category name="Logic" colour="%{BKY_LOGIC_HUE}">
+    <category name="論理" colour="%{BKY_LOGIC_HUE}">
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
       <block type="logic_negate"></block>
