--- a/demos/headless/index.html
+++ b/demos/headless/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Headless</title>
+  <title>Blockly デモ: ヘッドレス</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../python_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/ja.js"></script>
   <style>
     body {
       background-color: #fff;
@@ -27,10 +27,9 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Headless</h1>
+    <a href="../index.html">デモ</a> &gt; ヘッドレス</h1>
 
-  <p>This is a simple demo of generating Python code from XML with no graphics.
-  This might be useful for server-side code generation.</p>
+  <p>これは、グラフィックスのないXMLからPythonコードを生成する簡単なデモです。これは、サーバー側のコード生成に役立つ場合があります。</p>
 
   <table style="width: 100%">
     <tr>
@@ -95,7 +94,7 @@
   </table>
 
   <div style="text-align: center">
-    <button onclick="generate()">Generate Python &#10548;</button>
+    <button onclick="generate()">Python 生成 &#10548;</button>
   </div>
 
   <script>
