--- a/demos/index.html
+++ b/demos/index.html
@@ -22,10 +22,9 @@
   </style>
 </head>
 <body>
-  <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt; Demos</h1>
+  <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt; デモ</h1>
 
-  <p>These demos are intended for developers who want to integrate Blockly with
-  their own applications.</p>
+  <p>これらのデモは、Blocklyを独自のアプリケーションと統合する開発者を対象としています。</p>
 
   <table>
     <tr>
@@ -35,8 +34,8 @@
         </a>
       </td>
       <td>
-        <div><a href="fixed/index.html">Fixed Blockly</a></div>
-        <div>Inject Blockly into a page as a fixed element.</div>
+        <div><a href="fixed/index.html">固定サイズのBlockly</a></div>
+        <div>Blocklyを固定サイズでページに挿入します。</div>
       </td>
     </tr>
 
@@ -47,8 +46,8 @@
         </a>
       </td>
       <td>
-        <div><a href="resizable/index.html">Resizable Blockly</a></div>
-        <div>Inject Blockly into a page as a resizable element.</div>
+        <div><a href="resizable/index.html">サイズ変更可能なBlockly</a></div>
+        <div>サイズ変更可能な要素としてページにBlocklyを挿入します。</div>
       </td>
     </tr>
 
@@ -59,8 +58,8 @@
         </a>
       </td>
       <td>
-        <div><a href="toolbox/index.html">Defining the Toolbox</a></div>
-        <div>Organize blocks into categories for the user.</div>
+        <div><a href="toolbox/index.html">ツールボックスの定義</a></div>
+        <div>ユーザーのカテゴリにブロックを整理します。</div>
       </td>
     </tr>
 
@@ -71,8 +70,8 @@
         </a>
       </td>
       <td>
-        <div><a href="maxBlocks/index.html">Maximum Block Limit</a></div>
-        <div>Limit the total number of blocks allowed (for academic exercises).</div>
+        <div><a href="maxBlocks/index.html">最大ブロック制限</a></div>
+        <div>許可されるブロックの総数を制限します（学術演習用）。</div>
       </td>
     </tr>
 
@@ -83,8 +82,8 @@
         </a>
       </td>
       <td>
-        <div><a href="generator/index.html">Generate JavaScript</a></div>
-        <div>Turn blocks into code and execute it.</div>
+        <div><a href="generator/index.html">JavaScriptを生成</a></div>
+        <div>ブロックをコードに変換して実行します。</div>
       </td>
     </tr>
 
@@ -95,8 +94,8 @@
         </a>
       </td>
       <td>
-        <div><a href="headless/index.html">Headless</a></div>
-        <div>Generate code from XML without graphics.</div>
+        <div><a href="headless/index.html">ヘッドレス</a></div>
+        <div>グラフィックなしでXMLからコードを生成します。</div>
       </td>
     </tr>
 
@@ -107,9 +106,9 @@
         </a>
       </td>
       <td>
-        <div style="font-weight: bold">JS Interpreter</div>
-        <div>Demo #1: <a href="interpreter/step-execution.html">Step by step execution in JavaScript.</a></div>
-        <div>Demo #2: <a href="interpreter/async-execution.html">Asynchronous execution in JavaScript.</a></div>
+        <div style="font-weight: bold">JS通訳</div>
+        <div>Demo #1: <a href="interpreter/step-execution.html">JavaScriptでの段階的な実行。</a></div>
+        <div>Demo #2: <a href="interpreter/async-execution.html">JavaScriptでの非同期実行。</a></div>
       </td>
     </tr>
 
@@ -120,8 +119,8 @@
         </a>
       </td>
       <td>
-        <div><a href="graph/index.html">Graph</a></div>
-        <div>Instant updates when blocks are changed.</div>
+        <div><a href="graph/index.html">グラフ</a></div>
+        <div>ブロックが変更されたときの即時更新。</div>
       </td>
     </tr>
 
@@ -133,7 +132,7 @@
       </td>
       <td>
         <div><a href="rtl/index.html">RTL</a></div>
-        <div>See what Blockly looks like in right-to-left mode (for Arabic and Hebrew).</div>
+        <div>（アラビア語とヘブライ語の）右から左モードでBlocklyがどのように見えるかを確認します。</div>
       </td>
     </tr>
 
@@ -144,8 +143,8 @@
         </a>
       </td>
       <td>
-        <div><a href="custom-dialogs/index.html">Custom Dialogs</a></div>
-        <div>Override Blockly browser dialogs with custom implementations.</div>
+        <div><a href="custom-dialogs/index.html">カスタムダイアログ</a></div>
+        <div>カスタム実装でBlocklyブラウザーダイアログをオーバーライドします。</div>
       </td>
     </tr>
 
@@ -156,8 +155,8 @@
         </a>
       </td>
       <td>
-        <div><a href="custom-fields/index.html">Custom Fields</a></div>
-        <div>Implement a custom field.</div>
+        <div><a href="custom-fields/index.html">カスタムフィールド</a></div>
+        <div>カスタムフィールドを実装します。</div>
       </td>
     </tr>
 
@@ -168,8 +167,8 @@
         </a>
       </td>
       <td>
-        <div><a href="storage/index.html">Cloud Storage</a></div>
-        <div>Save and load blocks with App Engine.</div>
+        <div><a href="storage/index.html">クラウドストレージ</a></div>
+        <div>App Engineを使用してブロックを保存およびロードします。</div>
       </td>
     </tr>
 
@@ -180,8 +179,8 @@
         </a>
       </td>
       <td>
-        <div><a href="mirror/index.html">Mirrored Blockly</a></div>
-        <div>Two Blockly instances connected as master-slave.</div>
+        <div><a href="mirror/index.html">ミラーリングされたBlockly</a></div>
+        <div>マスタースレーブとして接続された2つのBlocklyインスタンス。</div>
       </td>
     </tr>
 
@@ -192,8 +191,8 @@
         </a>
       </td>
       <td>
-        <div><a href="accessible/index.html">Accessible Blockly</a></div>
-        <div>Version of Blockly accessible to screen readers.</div>
+        <div><a href="accessible/index.html">アクセスしやすいBlockly</a></div>
+        <div>スクリーンリーダーがアクセスできるBlocklyのバージョン。</div>
       </td>
     </tr>
 
@@ -204,8 +203,8 @@
         </a>
       </td>
       <td>
-        <div><a href="plane/index.html">Plane</a></div>
-        <div>Using Closure Templates to support 35 languages.</div>
+        <div><a href="plane/index.html">飛行機</a></div>
+        <div>クロージャテンプレートを使用して35言語をサポートします。</div>
       </td>
     </tr>
 
@@ -216,8 +215,8 @@
         </a>
       </td>
       <td>
-        <div><a href="code/index.html">Code Editor</a></div>
-        <div>Export a Blockly program into JavaScript, Python, PHP, Lua, Dart, or XML.</div>
+        <div><a href="code/index.html">コードエディター</a></div>
+        <div>BlocklyプログラムをJavaScript、Python、PHP、Lua、Dart、またはXMLにエクスポートします。</div>
       </td>
     </tr>
 
@@ -228,8 +227,8 @@
         </a>
       </td>
       <td>
-        <div><a href="blockfactory/index.html">Blockly Developer Tools</a></div>
-        <div>Build custom blocks and setup a toolbox using Blockly.</div>
+        <div><a href="blockfactory/index.html">Blockly開発者ツール</a></div>
+        <div>カスタムブロックをビルドし、Blocklyを使用してツールボックスをセットアップします。</div>
       </td>
     </tr>
     <tr>
@@ -239,8 +238,8 @@
         </a>
       </td>
       <td>
-        <div><a href="keyboard_nav/index.html">Keyboard Navigation</a></div>
-        <div>Demos keyboard navigation.</div>
+        <div><a href="keyboard_nav/index.html">キーボードナビゲーション</a></div>
+        <div>キーボードナビゲーションのデモ</div>
       </td>
     </tr>
   </table>
