--- a/demos/rtl/index.html
+++ b/demos/rtl/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="google" value="notranslate">
-  <title>Blockly Demo: RTL</title>
+  <title>Blockly デモ: RTL</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../msg/js/ar.js"></script>
@@ -37,7 +37,7 @@
 </head>
 <body onload="init()">
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Right-to-Left</h1>
+    <a href="../index.html">デモ</a> &gt; 右から左</h1>
 
   <div id="blocklyDiv"></div>
 
