--- a/tests/blocks/index.html
+++ b/tests/blocks/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Unit Tests for Blockly Blocks</title>
     <script src="../../blockly_uncompressed.js"></script>
-    <script src="../../msg/js/en.js"></script>  <!-- TODO: Test messages in all languages. -->
+    <script src="../../msg/js/ja.js"></script>  <!-- TODO: Test messages in all languages. -->
     <script src="../../blocks/colour.js"></script>
     <script src="../../blocks/lists.js"></script>
     <script src="../../blocks/logic.js"></script>
