--- a/tests/generators/index.html
+++ b/tests/generators/index.html
@@ -314,7 +314,7 @@ h1 {
       <block type="unittest_fail"></block>
       <block type="unittest_adjustindex"></block>
     </category>
-    <category name="Logic" colour="210">
+    <category name="論理" colour="210">
       <block type="controls_if"></block>
       <block type="controls_ifelse"></block>
       <block type="logic_compare"></block>
@@ -324,14 +324,14 @@ h1 {
       <block type="logic_null"></block>
       <block type="logic_ternary"></block>
     </category>
-    <category name="Loops" colour="120">
+    <category name="ループ" colour="120">
       <block type="controls_repeat_ext"></block>
       <block type="controls_whileUntil"></block>
       <block type="controls_for"></block>
       <block type="controls_forEach"></block>
       <block type="controls_flow_statements"></block>
     </category>
-    <category name="Math" colour="230">
+    <category name="数学" colour="230">
       <block type="math_number"></block>
       <block type="math_arithmetic"></block>
       <block type="math_single"></block>
@@ -346,7 +346,7 @@ h1 {
       <block type="math_random_float"></block>
       <block type="math_atan2"></block>
     </category>
-    <category name="Text" colour="160">
+    <category name="テキスト" colour="160">
       <block type="text"></block>
       <block type="text_join"></block>
       <block type="text_append"></block>
@@ -363,7 +363,7 @@ h1 {
       <block type="text_replace"></block>
       <block type="text_reverse"></block>
     </category>
-    <category name="Lists" colour="260">
+    <category name="リスト" colour="260">
       <block type="lists_create_empty"></block>
       <block type="lists_create_with"></block>
       <block type="lists_repeat"></block>
@@ -384,8 +384,8 @@ h1 {
       <block type="colour_blend"></block>
     </category>
     <sep></sep>
-    <category name="Variables" colour="330" custom="VARIABLE"></category>
-    <category name="Functions" colour="290" custom="PROCEDURE"></category>
+    <category name="変数" colour="330" custom="VARIABLE"></category>
+    <category name="関数" colour="290" custom="PROCEDURE"></category>
   </xml>
 
   <table height="95%" width="30%"><tr><td valign="top">
